--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -3,6 +3,6 @@
 {% block title %}Le journal de Maman{% endblock %}
 
 {% block body %}
-    <h1>Le journal de Maman</h1>
+    <h1>Bienvenue sur le journal de Maman</h1>
 
 {% endblock %}
