--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,22 +14,19 @@
         <header>
             <nav class="navbar navbar-expand-md navbar-dark bg-dark">
                 <a href="{{ path('index') }}" class="navbar-brand">Le Journal de Maman</a>
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <img src="{{ asset('images/fleur-de-lys.png') }}" title="Fleur de Lys" style="height: 30px;">
 
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav">
-                        <a href="#" class="pl-5 nav-item nav-link active">Accueil</a>
-                        <a href="#" class="pl-5 nav-item nav-link active">Journaux</a>
-                        <a href="#" class="pl-5 nav-item nav-link active">Une journée au hasard</a>
+                        <a href="{{ path('journaux_index') }}" class="pl-5 nav-item nav-link active">Journaux</a>
+                        <a href="{{ path('articles_show_random') }}" class="pl-5 nav-item nav-link active">Une journée au hasard</a>
                     </div>
                     <div class="navbar-nav ml-auto">
-                        <a href="#" class="pr-5 nav-item nav-link active">Ajouter du contenu</a>
                         {% if app.user %}
-                            Bienvenue {{ app.user.firstname }}
+                            <a href="{{ path('articles_new') }}" class="pr-5 nav-item nav-link active">Ajouter du contenu</a>
+                            <a href="{{ path('user_show', {id: app.user.id}) }}" class="pr-5 nav-item nav-link active">Bienvenue {{ app.user.firstname }}</a>
                         {% else %}
-                            <a href="/login" class="nav-item nav-link active">Se connecter</a>
+                            <a href="{{ path('app_login') }}" class="nav-item nav-link active">Se connecter</a>
                         {% endif %}
                     </div>
                 </div>
