--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -3,6 +3,14 @@
 {% block title %}Le journal de Maman{% endblock %}
 
 {% block body %}
-    <h1>Bienvenue sur le journal de Maman</h1>
-
+    <main class="index">
+        <h1 class="p-3">Bienvenue sur le journal de Maman</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    card
+                </div>
+            </div>
+        </div>
+    </main>
 {% endblock %}
