--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -15,4 +15,7 @@ body {
     font-size : 1rem;
 }
 
-
+.text-presentation {
+    font-family: 'Caveat', Arial sans-serif;
+    font-size: x-large;
+}
