--- a/templates/articles/new.html.twig
+++ b/templates/articles/new.html.twig
@@ -1,11 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Articles{% endblock %}
+{% block title %}Ajouter une page de journal{% endblock %}
 
 {% block body %}
-    <h1>Create new Articles</h1>
-
-    {{ include('articles/_form.html.twig') }}
-
-    <a href="{{ path('articles_index') }}">back to list</a>
+    <main class="index">
+        <h1>Ajouter une page de journal</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    {{ include('articles/_form.html.twig') }}
+                </div>
+            </div>
+        </div>
+    </main>
 {% endblock %}
