--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -13,8 +13,8 @@
                 </p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-6">
+        <div class="row justify-content-center">
+            <div class="col-sm-4 m-3">
                 <div class="card text-center">
                     <div class="card-body">
                         <h5 class="card-title">Consulter les journaux</h5>
@@ -23,7 +23,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-4 m-3">
                 <div class="card text-center">
                     <div class="card-body">
                         <h5 class="card-title">Ajouter une page au journal</h5>
