--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,7 +61,7 @@
         {% block body %}{% endblock %}
         {% block footer %}
             <footer>
-                
+                coucou le footer !
             </footer>
         {% endblock %}
         {% block javascripts %}{% endblock %}
