--- a/templates/articles/show.html.twig
+++ b/templates/articles/show.html.twig
@@ -6,6 +6,9 @@
     <main class="article mt-5">
         <div class="container">
             <div class="row justify-content-center">
+                <div class="col-2">
+                    <a href="{{ path('journaux_show', {'id': article.journal.id}) }}" class="btn btn-success">Sommaire de ce journal</a>
+                </div>
                 <div class="col-8 fond-paper">
                     <h2 class="text-center pt-4">
                         {{ trans_day_hash[article.jour|date('l')] }}
@@ -17,13 +20,13 @@
                         {{ article.contenu |nl2br }}
                     </p>
                 </div>
+                <div class="col-2">
+                    {% if app.user %}
+                    <a href="{{ path('articles_edit', {'id': article.id}) }}" class="btn btn-dark">Modifier le texte de cette page</a>
+                    {% endif %}
+                </div>
             </div>
         </div>
     </main>
 
-    <a href="{{ path('articles_index') }}">back to list</a>
-
-    <a href="{{ path('articles_edit', {'id': article.id}) }}">edit</a>
-
-    {{ include('articles/_delete_form.html.twig') }}
 {% endblock %}
