--- a/templates/journaux/show.html.twig
+++ b/templates/journaux/show.html.twig
@@ -5,40 +5,32 @@
 {% block body %}
     <main class="journal">
         <h1 class="p-3">{{ journaux.titre }}</h1>
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <p class="text-presentation">
-                        Ce journal commence le {{ journaux.datedebut ? journaux.datedebut|date('d-m-Y') : '' }}
-                        et se termine le {{ journaux.datefin ? journaux.datefin|date('d-m-Y') : '' }}
+        <div class="bureau">
+            {% for article in journaux.articles %}
+            <a href="{{ path('articles_show', {id: article.id}) }}">
+                <div class="ephemeride text-center m-3 p-2">
+                    <p>
+                        {{ trans_day_hash[article.jour|date('l')] }}
+                    </p>
+                    <p class="jour-rouge">
+                        {{ article.jour ? article.jour|date('d') : '' }}
+                    </p>
+                    <p>
+                        {{ article.jour ? article.jour|date('F') : '' }}
                     </p>
                 </div>
-            </div>
-            <a href="{{ path('articles_show', {id: 1}) }}" class="ephemeride">
-                <div class="card-deck" style="width: 150px;">
-                    <div class="card">
-                        {% for article in journaux.articles %}
-                        <div class="card-body">
-                            <div class="card-title text-center">
-                                {{ trans_day_hash[article.jour|date('l')] }}
-                            </div>
-                            <div class="jour-rouge">
-                                {{ article.jour ? article.jour|date('d') : '' }}
-                            </div>
-                            <div class="card-title text-center">
-                                {{ article.jour ? article.jour|date('F') : '' }}
-                            </div>
-                        </div>
-                        {% endfor %}
-                    </div>
-                </div>
             </a>
+                {% else %}
+                    <h3>Aucune page de ce journal n'a été entrée.</h3>
+            {% endfor %}
         </div>
     </main>
 
-    <a href="{{ path('journaux_index') }}">back to list</a>
+    <a href="{{ path('journaux_index') }}">Liste des journaux</a>
+    {% if app.user %}
+        <a href="{{ path('journaux_edit', {'id': journaux.id}) }}"class="btn btn-primary">
+            éditer les informations de ce journal
+        </a>
+    {% endif %}
 
-    <a href="{{ path('journaux_edit', {'id': journaux.id}) }}">edit</a>
-
-    {{ include('journaux/_delete_form.html.twig') }}
 {% endblock %}
