--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -60,8 +60,12 @@
     } %}
         {% block body %}{% endblock %}
         {% block footer %}
-            <footer>
-                coucou le footer !
+            <footer class="mt-5">
+                <div class="container text-center">
+                    <div class="text-center">© 2020 -
+                        <a href="http://www.jejoueenclasse.fr" target="_blank"> Jyaire</a>
+                    </div>
+                </div>
             </footer>
         {% endblock %}
         {% block javascripts %}{% endblock %}
