--- a/templates/articles/_form.html.twig
+++ b/templates/articles/_form.html.twig
@@ -1,4 +1,35 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<div class="row p-3">
+    <div class="offset-2 col-3 text-right marker">
+        {{ form_label(form.jour) }}
+    </div>
+    <div class="col-5 lead">
+        {{ form_widget(form.jour) }}
+    </div>
+</div>
+<div class="row p-3">
+    <div class="offset-2 col-3 text-right marker">
+        {{ form_label(form.contenu) }}
+    </div>
+    <div class="col-5 lead">
+        {{ form_widget(form.contenu) }}
+    </div>
+</div>
+<div class="row p-3">
+    <div class="offset-2 col-3 text-right marker">
+        {{ form_label(form.journal) }}
+    </div>
+    <div class="col-5 lead">
+        {{ form_widget(form.journal) }}
+    </div>
+</div>
+<div class="row p-3">
+    <div class="offset-2 col-3 text-right marker">
+    </div>
+    <div class="col-5 lead">
+        <button class="btn btn-success">{{ button_label|default('Enregistrer') }}</button>
+        <a href="{{ path('journaux_index') }}" class="btn btn-dark">Annuler</a>
+    </div>
+</div>
 {{ form_end(form) }}
+
