--- a/templates/articles/new.html.twig
+++ b/templates/articles/new.html.twig
@@ -3,14 +3,10 @@
 {% block title %}Ajouter une page de journal{% endblock %}
 
 {% block body %}
-    <main class="index">
-        <h1>Ajouter une page de journal</h1>
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
+    <main class="carrousel p-3">
+        <h1>Ajout d'une page au journal</h1>
+
                     {{ include('articles/_form.html.twig') }}
-                </div>
-            </div>
-        </div>
+
     </main>
 {% endblock %}
