--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -60,7 +60,7 @@
     } %}
         {% block body %}{% endblock %}
         {% block footer %}
-            <footer class="mt-5">
+            <footer class="mt-5 footer">
                 <div class="container text-center">
                     <div class="text-center">© 2020 -
                         <a href="http://www.jejoueenclasse.fr" target="_blank"> Jyaire</a>
