--- a/templates/articles/edit.html.twig
+++ b/templates/articles/edit.html.twig
@@ -1,13 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Articles{% endblock %}
+{% block title %}Modifier une page{% endblock %}
 
 {% block body %}
-    <h1>Edit Articles</h1>
+<main class="carrousel p-3">
+    <h1>Modifier une page de journal</h1>
 
-    {{ include('articles/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('articles_index') }}">back to list</a>
-
-    {{ include('articles/_delete_form.html.twig') }}
+    {{ include('articles/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+</main>
 {% endblock %}
