--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,38 +1,55 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}{{ user.firstname }} {{ user.name }}{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <main class="container">
+        <div class="row p-4">
+            <div class="col-8">
+                <h1>Profil de {{ user.firstname }} {{ user.name }}</h1>
+            </div>
+            <div class="col-4 text-right">
+                <a href="{{ path('app_logout')}}" class="btn btn-danger">Déconnexion</a>
+            </div>
+        </div>
+        <div class="row p-3">
+            <div class="offset-2 col-3 text-right marker">
+                Prénom :
+            </div>
+            <div class="col-5 lead">
+                {{ user.firstname }}
+            </div>
+        </div>
+        <div class="row p-3">
+            <div class="offset-2 col-3 text-right marker">
+                Nom :
+            </div>
+            <div class="col-5 lead">
+                {{ user.name }}
+            </div>
+        </div>
+        <div class="row p-3">
+            <div class="offset-2 col-3 text-right marker">
+                Email :
+            </div>
+            <div class="col-5 lead">
+                {{ user.email }}
+            </div>
+        </div>
+        <div class="row p-3">
+            <div class="offset-2 col-3 text-right marker">
+                Lien familial à maman :
+            </div>
+            <div class="col-5 lead">
+                {{ user.link }}
+            </div>
+        </div>
+        <div class="row p-3">
+            <div class="offset-2 col-3 text-right">
+            </div>
+            <div class="col-5 lead">
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ user.id }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ user.email }}</td>
-            </tr>
-            <tr>
-                <th>Roles</th>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-            </tr>
-            <tr>
-                <th>Password</th>
-                <td>{{ user.password }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ user.name }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('user_index') }}">back to list</a>
-
-    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
-
-    {{ include('user/_delete_form.html.twig') }}
+            </div>
+        </div>
+    </main>
 {% endblock %}
