--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,7 +7,9 @@
         <div class="row d-flex mt-4">
             <div class="col-5">
                 <h3>Demander un accès</h3>
-
+                <a href="{{ path('app_register')}}" class="btn btn-lg btn-primary">
+                    Remplir le formulaire
+                </a>
             </div>
             <div class="col-2">
                 ou
