Adding button to scroll to top

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -28,6 +28,17 @@ body {
     font-family: 'Permanent Marker', Arial sans-serif;
 }
 
+#scroll_to_top {
+    position: fixed;
+    width: 25px;
+    height: 25px;
+    bottom: 50px;
+    right: 50px;
+}
+#scroll_to_top img {
+    width: 25px;
+}
+
 /* JOURNAUX */
 
 .journaux {
