--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -71,6 +71,8 @@
                 </div>
             </footer>
         {% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
+        {% endblock %}
     </body>
 </html>
