--- a/templates/articles/show.html.twig
+++ b/templates/articles/show.html.twig
@@ -7,7 +7,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-2">
-                    <a href="{{ path('journaux_show', {'id': article.journal.id}) }}" class="btn btn-success">Sommaire de ce journal</a>
+                    <a href="{{ path('journaux_show', {'id': article.journal.id}) }}" class="btn btn-success fixed">Sommaire de ce journal</a>
                 </div>
                 <div class="col-8 fond-paper">
                     <h2 class="text-center pt-4">
@@ -22,10 +22,15 @@
                 </div>
                 <div class="col-2">
                     {% if app.user %}
-                    <a href="{{ path('articles_edit', {'id': article.id}) }}" class="btn btn-dark">Modifier le texte de cette page</a>
+                    <a href="{{ path('articles_edit', {'id': article.id}) }}" class="btn btn-dark">
+                        Modifier le texte de cette page
+                    </a>
                     {% endif %}
                 </div>
             </div>
+        </div>
+        <div id="scroll_to_top">
+            <a href="#top"><img src="{{ asset('images/scrolltop.png') }}" alt="Retourner en haut" /></a>
         </div>
     </main>
 
