--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -9,7 +9,9 @@ nav {
 /* GENERAL */
 
 body {
-    background-color: lightgray;
+    background-color: #e9e9e9;
+    //background-image: url('../../public/images/pattern2.png');
+    background-repeat: repeat;
     font-family: 'Caveat', Arial sans-serif;
     color : black;
     font-size : 1rem;
@@ -151,8 +153,26 @@ body {
 /* ARTICLE */
 
 .article {
+
+    #porteplume {
+        position: relative;
+        padding:50px;
+    }
+
+    #encrier {
+        position: relative;
+        width: 200px;
+        margin-left: -60px;
+        padding-top: 70px;
+    }
+
     .fond-paper {
         background-image:url('../../public/images/paperwhite.jpg');
+        -moz-box-shadow: 3px -3px 20px 5px #656565;
+        -webkit-box-shadow: 3px -3px 20px 5px #656565;
+        -o-box-shadow: 3px -3px 20px 5px #656565;
+        box-shadow: 3px -3px 20px 5px #656565;
+        filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=45, Strength=20);
 
         .text-article {
             font-size: 1.6rem;
