--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -10,7 +10,7 @@ nav {
 
 body {
     background-color: #e9e9e9;
-    //background-image: url('../../public/images/pattern2.png');
+    //background-image: url('../../public/images/bois.png');
     background-repeat: repeat;
     font-family: 'Caveat', Arial sans-serif;
     color : black;
