--- a/templates/articles/_form.html.twig
+++ b/templates/articles/_form.html.twig
@@ -1,32 +1,30 @@
 {{ form_start(form) }}
 <div class="row p-3">
-    <div class="offset-2 col-3 text-right marker">
+    <div class="col-3 text-right marker">
         {{ form_label(form.jour) }}
     </div>
-    <div class="col-5 lead">
+    <div class="col-3 lead">
         {{ form_widget(form.jour) }}
     </div>
-</div>
-<div class="row p-3">
-    <div class="offset-2 col-3 text-right marker">
-        {{ form_label(form.contenu) }}
-    </div>
-    <div class="col-5 lead">
-        {{ form_widget(form.contenu) }}
-    </div>
-</div>
-<div class="row p-3">
-    <div class="offset-2 col-3 text-right marker">
+    <div class="col-3 text-right marker">
         {{ form_label(form.journal) }}
     </div>
-    <div class="col-5 lead">
+    <div class="col-3 lead">
         {{ form_widget(form.journal) }}
     </div>
 </div>
 <div class="row p-3">
-    <div class="offset-2 col-3 text-right marker">
+    <div class="col-3 text-right marker">
+        {{ form_label(form.contenu) }}
     </div>
-    <div class="col-5 lead">
+    <div class="col-9 lead">
+        {{ form_widget(form.contenu, {'attr': {'class': 'contenu'}}) }}
+    </div>
+</div>
+<div class="row p-3">
+    <div class="col-3 text-right marker">
+    </div>
+    <div class="col-9 lead">
         <button class="btn btn-success">{{ button_label|default('Enregistrer') }}</button>
         <a href="{{ path('journaux_index') }}" class="btn btn-dark">Annuler</a>
     </div>
