Adding flash message for success or danger

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,6 +36,16 @@
                 </div>
             </nav>
         </header>
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success text-center">
+                {{ message }}
+            </div>
+        {% endfor %}
+        {% for message in app.flashes('danger') %}
+            <div class="alert alert-danger text-center">
+                {{ message }}
+            </div>
+        {% endfor %}
     {% endblock %}
     {% set trans_day_hash = {
         "Monday": "Lundi",
