--- a/templates/journaux/show.html.twig
+++ b/templates/journaux/show.html.twig
@@ -26,7 +26,7 @@
         </div>
         <div class="row justify-content-end pr-5">
             {% if app.user %}
-                <a href="{{ path('articles_new') }}" class="btn btn-success mr-5">
+                <a href="{{ path('articles_new', {'journal': journaux.id}) }}" class="btn btn-success mr-5">
                     Ajouter une page
                 </a>
                 <a href="{{ path('journaux_edit', {'id': journaux.id}) }}" class="btn btn-primary">
